objects/ACC_Channel__c.object
<CustomObject>
    <fields>
        <fullName>AccountRole__c</fullName>
        <description>September Release - Picklist to select the role of an account.</description>
        <label>Account Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Distributor / Resellers</fullName>
                </value>
                <value>
                    <fullName>Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Panel Builders</fullName>
                </value>
                <value>
                    <fullName>Specifier</fullName>
                </value>
                <value>
                    <fullName>Subcontractor</fullName>
                </value>
                <value>
                    <fullName>System integrator</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>September Release - Field to relate an account with a channel.</description>
        <inlineHelpText>Please do not change the defaulted value.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channels</relationshipLabel>
        <relationshipName>Channels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>September Release - Picklist to choose the business.</description>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EcoBuildings</fullName>
                    <label>BD</label>
                </value>
                <value>
                    <fullName>Energy</fullName>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>Cloud Services</fullName>
                    <label>GC</label>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>Process Automation</fullName>
                    <label>IA</label>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Partner Projects</fullName>
                    <label>PP</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                    <label>PR</label>
                </value>
                <value>
                    <fullName>Energy and Sustainability</fullName>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>Solar</fullName>
                    <label>SO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Jan16 Minor Release.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarketShare__c</fullName>
        <description>September Release - Field to store the market share percentage.</description>
        <label>Market Share</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ValueChainPlayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>September Release - Field to store Value Chain Players  (i.e Distributors), and their market shares at the account level</description>
        <label>Value Chain Player</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel For</relationshipLabel>
        <relationshipName>ValueChainPlayers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Channel</label>
    <nameField>
        <displayFormat>CHN - {0000}</displayFormat>
        <label>Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>